# RDesk

./: .Rbuildignore  .Rprofile  .gitignore  404.html  CONTRIBUTING.html  CONTRIBUTING.md  CRAN-SUBMISSION  DESCRIPTION  LICENSE-text.html  LICENSE-text.md  MAINTENANCE.html  MAINTENANCE.md  MIGRATION_GUIDE.md  NAMESPACE  NEWS.md  PROJECT_STATUS.md  RDesk_Agent_Briefing.docx  RDesk_Agent_Briefing.txt  RDesk_Agent_Briefing_utf8.txt  RDesk_TS_CREATOR_EXPLAINED.md  README.md  _pkgdown.yml  authors.html  authors.md  build_full.R  build_test.R  build_test_fix.R  check_log.txt  check_log_utf8.txt  cran-comments.md  index.html  index.md  llms.txt  parse_err.txt  pkgdown.yml  search.json  sitemap.xml
.agents/workflows/: ci-maintenance.md  feature-fix.md  pre-push-checklist.md
.github/workflows/: R-CMD-check.yml  build-app.yml  pkgdown.yaml  release.yml
R/: App.R  async.R  build.R  ipc.R  scaffold.R  utils.R  window.R  zzz.R
RDesk/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  test_window_r.R  verify_native_ipc.R  verify_phase0.R
RDesk/.github/workflows/: build-app.yml
RDesk/R/: App.R  RDesk-package.R  build.R  ipc.R  scaffold.R  server.R  utils.R  window.R  zzz.R
RDesk/inst/www/: rdesk.js
RDesk/launcher_src/launcher/: CMakeLists.txt  build.ps1  build.sh  main.cpp
RDesk/launcher_src/launcher/build_vs/: CMakeCache.txt
RDesk/launcher_src/launcher/webview2_sdk/_rels/: .rels
RDesk/man/: App.Rd  build_app.Rd  rdesk_copy_dir.Rd  rdesk_encode_message.Rd  rdesk_fetch_portable_r.Rd  rdesk_find_gpp.Rd  rdesk_free_port.Rd  rdesk_make_router.Rd  rdesk_mime_type.Rd  rdesk_open_window.Rd  rdesk_resolve_deps.Rd  rdesk_start_server.Rd  rdesk_to_msys_path.Rd
articles/: architecture.html  architecture.md  async-guide.html  async-guide.md  cookbook.html  cookbook.md  getting-started.html  getting-started.md  index.html  index.md  ipc-contract.html  ipc-contract.md  shiny-migration.html  shiny-migration.md
dist_test_fix_unzipped/CarsPrunedFix-1.0.0-windows/app/: app.R
inst/: WORDLIST
inst/www/: rdesk.js
launcher_src/launcher/: CMakeLists.txt  build_launcher.bat  main.cpp
launcher_src/launcher/webview2_sdk/: Microsoft.Web.WebView2.nuspec
launcher_src/stub/: stub.cpp
man/: App.Rd  async.Rd  build_app.Rd  rdesk_async.Rd  rdesk_build_installer.Rd  rdesk_build_stub.Rd  rdesk_create_app.Rd  rdesk_fetch_portable_r.Rd  rdesk_find_7zip.Rd  rdesk_find_iscc.Rd  rdesk_find_r_dir.Rd  rdesk_install_packages_to.Rd  rdesk_message.Rd  rdesk_parse_message.Rd  rdesk_poll_jobs.Rd  rdesk_prompt_choice.Rd  rdesk_prune_runtime.Rd  rdesk_resolve_www.Rd  rdesk_validate_build_inputs.Rd
news/: index.html  index.md
reference/: App.html  App.md  async.html  async.md  build_app.html  build_app.md  index.html  index.md  rdesk_async.html  rdesk_async.md  rdesk_auto_update.html  rdesk_auto_update.md  rdesk_cancel_job.html  rdesk_cancel_job.md  rdesk_close_window.html  rdesk_close_window.md  rdesk_create_app.html  rdesk_create_app.md  rdesk_df_to_list.html  rdesk_df_to_list.md  rdesk_error_plot.html  rdesk_error_plot.md  rdesk_is_bundle.html  rdesk_is_bundle.md  rdesk_jobs_list.html  rdesk_jobs_list.md  rdesk_jobs_pending.html  rdesk_jobs_pending.md  rdesk_log.html  rdesk_log.md  rdesk_log_dir.html  rdesk_log_dir.md  rdesk_make_router.html  rdesk_make_router.md  rdesk_message.html  rdesk_message.md  rdesk_open_window.html  rdesk_open_window.md  rdesk_parse_hotkey.html  rdesk_parse_hotkey.md  (+28 more)
renv/: settings.json
tests/testthat/: test-build-validation.R  test-ipc.R  test-plots.R  test-scaffold.R
vignettes/: architecture.Rmd  async-guide.Rmd  cookbook.Rmd  getting-started.Rmd  ipc-contract.Rmd  shiny-migration.Rmd
(+37 files in other folders)
